[gd_scene load_steps=2 format=3 uid="uid://d16x6x2ssg8y2"]

[ext_resource type="Script" uid="uid://b55fa25yfce65" path="res://online_screen.gd" id="1_1q4xg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1q4xg")

[node name="IPLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 361.0
offset_top = 181.0
offset_right = 524.0
offset_bottom = 212.0
text = "127.0.0.1"
placeholder_text = "xxx.xxx.xxx.xxx"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 53.0
offset_right = 419.0
offset_bottom = 76.0
text = "Start or Join a Game!"

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 161.0
offset_right = 353.0
offset_bottom = 304.0
text = "Host"

[node name="ConnectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 241.0
offset_right = 528.0
offset_bottom = 304.0
text = "Connect"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 417.0
offset_right = 608.0
offset_bottom = 498.0
text = "Start Game!"

[node name="NameLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 93.0
offset_right = 473.0
offset_bottom = 124.0
placeholder_text = "Name"

[node name="PlayersList" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 324.0
offset_right = 342.0
offset_bottom = 510.0
text = "Players List
========="

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
